--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 gitdb==4.0.11
 GitPython==3.1.40
+greenlet==3.0.1
 idna==3.4
 importlib-metadata==6.8.0
 Jinja2==3.1.2
@@ -15,6 +16,7 @@ jsonschema-specifications==2023.7.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
+mysqlclient==2.2.0
 numpy==1.26.1
 packaging==23.2
 pandas==2.1.2
@@ -31,6 +33,7 @@ rich==13.6.0
 rpds-py==0.12.0
 six==1.16.0
 smmap==5.0.1
+SQLAlchemy==2.0.23
 streamlit==1.28.1
 tenacity==8.2.3
 toml==0.10.2
@@ -41,4 +44,5 @@ tzdata==2023.3
 tzlocal==5.2
 urllib3==2.0.7
 validators==0.22.0
+watchdog==3.0.0
 zipp==3.17.0
